add wgpu-sky-rendering to the list of examples using wgpu

--- a/index.html
+++ b/index.html
@@ -256,6 +256,12 @@
                 "thumbnail": "screenshots/neothesia.gif"
             },
             {
+                "name": "Sky renderer",
+                "description": "A wgpu allsky renderer",
+                "website": "https://github.com/bmatthieu3/wgpu-sky-rendering",
+                "thumbnail": "screenshots/dss.gif"
+            },
+            {
                 "name": "grass field",
                 "description": "TuiTui's everyday experiments",
                 "website": "https://www.instagram.com/mactuitui/",
