--- a/index.html
+++ b/index.html
@@ -310,6 +310,12 @@
                 "thumbnail": "screenshots/ampli-Fe.jpg"
             },
             {
+                "name": "ENSnano"
+                "description": "CAD software for 3D DNA nanostructures"
+                "website": "https://ens-lyon.fr/ensnano"
+                "thumbnail": "screenshots/ensnano.jpg"
+            },
+            {
                 "name": "wgpu-rs",
                 "description": "Water example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/water",
