--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
                 "thumbnail": "screenshots/ampli-Fe.jpg"
             },
             {
-                "name": "ENSnano"
-                "description": "CAD software for 3D DNA nanostructures"
-                "website": "https://ens-lyon.fr/ensnano"
+                "name": "ENSnano",
+                "description": "CAD software for 3D DNA nanostructures",
+                "website": "https://ens-lyon.fr/ensnano",
                 "thumbnail": "screenshots/ensnano.jpg"
             },
             {
