Add Veloren entry

--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
                 "thumbnail": "screenshots/nbodysim.gif",
             },
             {
+                "name": "Veloren",
+                "description": "A multiplayer voxel RPG with advanced terrain generation and economy simulation",
+                "website": "https://veloren.net/",
+                "thumbnail": "screenshots/veloren.gif",
+            },
+            {
                 "name": "Dotrix",
                 "description": "Skeletal Animation Example of a 3D game engine",
                 "website": "https://github.com/lowenware/dotrix",
