--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 "name": "Egregoria",
                 "description": "Society simulator",
                 "website": "https://github.com/Uriopass/Egregoria",
-                "thumbnail": "screenshots/egregoria.png"
+                "thumbnail": "screenshots/egregoria.jpg"
             },
             {
                 "name": "Sandbox",
