Update ensnano entry

--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             {
                 "name": "ENSnano",
                 "description": "CAD software for 3D DNA nanostructures",
-                "website": "https://ens-lyon.fr/ensnano",
-                "thumbnail": "screenshots/ensnano.jpg"
+                "website": "https://www.ens-lyon.fr/ensnano",
+                "thumbnail": "screenshots/ensnano.png"
             },
             {
                 "name": "wgpu-rs",
