--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                             wgpu
                         </h1>
                         <p class="subtitle is-3">
-                            <b>wgpu</b> is a safe and portable graphics API for Rust based on the WebGPU API.
-                            It is suitable for general purpose graphics and computation needs of Rust community.
+                            <b>wgpu</b> is a safe and portable graphics library for Rust based on the WebGPU API.
+                            It is suitable for general purpose graphics and compute on the GPU.
                         </p>
                         <p class="subtitle is-3">
                             Applications using <b>wgpu</b> run natively on Vulkan, Metal, DirectX 11/12, and OpenGL ES;
