add hello in worker example

--- a/examples-gpu/index.html
+++ b/examples-gpu/index.html
@@ -67,6 +67,7 @@
         "skybox",
         // "texture-arrays",
         // "water",
+        "hello-worker",
       ];
       const list = document.createElement("ul");
       for (let exampleName of exampleNames) {
@@ -82,7 +83,10 @@
       const currentExample = new URLSearchParams(window.location.search).get(
         "example"
       );
-      if (currentExample) {
+      if (currentExample === "hello-worker") {
+        console.info("Note: loading modules in web workers is currently not supported on Firefox");
+        const worker = new Worker("hello-worker.js", { type: "module" });
+      } else if (currentExample) {
         import(`./wasm/${currentExample}.js`).then((module) => module.default());
       } else {
         window.location.assign(
