Added 2D NBody WASM sim with demo

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
         <div class="container">
             <h1 class="title is-1"><a name="showcase">#</a> Showcase</h1>
             <br>
-            <p class="subtitle is-4">Made something cool with <b>wgpu</b>? <a href="https://github.com/gfx-rs/wgpu-rs.github.io">Make a PR</a>, and reach out to us on <a href="https://matrix.to/#/#wgpu-users:matrix.org">#wgpu-users</a>!</p>
+            <p class="subtitle is-4">Made something cool with <b>wgpu</b>? <a
+                    href="https://github.com/gfx-rs/wgpu-rs.github.io">Make a PR</a>, and reach out to us on <a
+                    href="https://matrix.to/#/#wgpu-users:matrix.org">#wgpu-users</a>!</p>
             <br>
 
             <div id="showcase_container"></div>
@@ -222,6 +224,12 @@
                 "description": "A data-driven game engine built in Rust",
                 "website": "https://bevyengine.org/",
                 "thumbnail": "screenshots/bevy.gif",
+            },
+            {
+                "name": "WASM nbodysim",
+                "description": "Realtime 2D WASM N-Body-Simulation",
+                "website": "https://github.com/simbleau/nbody-wasm-sim",
+                "thumbnail": "screenshots/nbodywasm.gif",
             },
             {
                 "name": "nbodysim",
@@ -370,7 +378,7 @@
         ];
 
         // Showcase Card Template
-        const showcase_template = ({name, description, website, thumbnail}) => {
+        const showcase_template = ({ name, description, website, thumbnail }) => {
             // Providing fallback formats for Safari
             const file_ext_pos = thumbnail.lastIndexOf(".");
             const file_name = thumbnail.slice(0, file_ext_pos);
@@ -405,13 +413,13 @@
 
         const showcase_container = document.getElementById("showcase_container");
 
-        for (let {name, description, website, thumbnail} of showcase_list) {
+        for (let { name, description, website, thumbnail } of showcase_list) {
             showcase_container.insertAdjacentHTML("beforeend", showcase_template({
-                    name,
-                    description,
-                    website,
-                    thumbnail
-                }));
+                name,
+                description,
+                website,
+                thumbnail
+            }));
         }
     </script>
 </body>
