Add Rerun to the showcase

--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@
                 "thumbnail": "screenshots/bevy.gif",
             },
             {
+                "name": "Rerun",
+                "description": "SDK + Visualizer for logging computer vision and robotics.",
+                "website": "https://www.rerun.io/",
+                "thumbnail": "screenshots/rerun.gif",
+            },
+            {
                 "name": "WASM nbodysim",
                 "description": "Realtime 2D WASM N-Body-Simulation",
                 "website": "https://github.com/simbleau/nbody-wasm-sim",
