Add Pdhv to Showcase

--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "Pdhv",
+                "description": "Pdhv is a real-time performance data acquisition software.",
+                "website": "https://pdhv.fr",
+                "thumbnail": "screenshots/pdhv.webp",
+            },
+            {
                 "name": "Bevy",
                 "description": "A data-driven game engine built in Rust",
                 "website": "https://bevyengine.org/",
