Add Albedo to showcase

--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "Albedo",
+                "description": "Albedo is a library for real-time pathtracing and lightmapping.",
+                "website": "https://github.com/albedo-engine/albedo",
+                "thumbnail": "screenshots/albedo.webp",
+            },
+            {
                 "name": "Pdhv",
                 "description": "Pdhv is a real-time performance data acquisition software.",
                 "website": "https://pdhv.fr",
