--- a/examples-gl/index.html
+++ b/examples-gl/index.html
@@ -49,19 +49,23 @@
     <script type="module">
       const exampleNames = [
         // Certain examples are hidden for now
-        // "boids",
-        // "capture",
+        "boids",
+        "bunnymark",
         "cube",
-        // "hello",
-        // "hello-compute",
         "hello-triangle",
-        // "hello-windows",
         "mipmap",
-        // "msaa-line",
+        "msaa-line",
+        // "render-to-texture", No canvas for WebGL
+        // "repeated-compute", No compute
         "shadow",
         "skybox",
-        // "texture-arrays",
-        // "water",
+        "srgb-blend",
+        "stencil-triangles",
+        // "storage-texture", No storage texture
+        // "texture-arrays", No texture arrays
+        // "timestamp-queries", No canvas for WebGL
+        // "uniform-values", No compute
+        "water",
       ];
       const list = document.createElement("ul");
       for (let exampleName of exampleNames) {
