--- a/examples-gpu/index.html
+++ b/examples-gpu/index.html
@@ -55,18 +55,22 @@
       const exampleNames = [
         // Certain examples are hidden for now
         "boids",
-        // "capture",
+        "bunnymark",
         "cube",
-        // "hello",
-        "hello-compute",
         "hello-triangle",
-        // "hello-windows",
         "mipmap",
-        // "msaa-line",
+        "msaa-line",
+        "render-to-texture",
+        "repeated-compute",
         "shadow",
         "skybox",
-        // "texture-arrays",
-        // "water",
+        "srgb-blend",
+        "stencil-triangles",
+        "storage-texture",
+        // "texture-arrays", No texture arrays
+        "timestamp-queries",
+        "uniform-values",
+        "water",
       ];
       const list = document.createElement("ul");
       for (let exampleName of exampleNames) {
