--- a/index.html
+++ b/index.html
@@ -107,29 +107,12 @@
                             </div>
                         </div>
 
-                        <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-link">
-                                <span class="icon">
-                                    <i class="fas fa-rocket"></i>
-                                </span>
-                                <span>Try Live Demos</span>
-                            </a>
-
-                            <div class="navbar-dropdown">
-                                <a class="navbar-item" href="https://wgpu.rs/examples-gpu/">
-                                    <span class="icon">
-                                        <i class="fas fa-dragon"></i>
-                                    </span>
-                                    <span>WebGPU (experimental)</span>
-                                </a>
-                                <a class="navbar-item" href="https://wgpu.rs/examples-gl/">
-                                    <span class="icon">
-                                        <i class="fas fa-dove"></i>
-                                    </span>
-                                    <span>WebGL2</span>
-                                </a>
-                            </div>
-                        </div>
+                        <a class="navbar-item" href="https://wgpu.rs/examples/">
+                            <span class="icon">
+                                <i class="fas fa-rocket"></i>
+                            </span>
+                            <span>Try Live Demos</span>
+                        </a>
                     </div>
 
                     <div class="navbar-end">
