--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@
                 "website": "https://www.ens-lyon.fr/ensnano",
                 "thumbnail": "screenshots/ensnano.png"
             },
+	    {
+		"name": "Fractl",
+		"description": "Fractal renderer using compute shaders supporting both native targets and wasm",
+		"website": "https://github.com/Shapur1234/Fractl",
+		"thumbnail": "screenshots/fractl.png"
+	    },
             {
                 "name": "wgpu",
                 "description": "Water example",
