Added 3D Gaussian Splatting Renderer and sorted showcases alphabetically

--- a/index.html
+++ b/index.html
@@ -203,16 +203,22 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "3D Gaussian Splatting",
+                "description": "3D Gaussian Splatting Scene Viewer with GPU Radix Sort",
+                "website": "https://github.com/KeKsBoTer/web-splat",
+                "thumbnail": "screenshots/web-splat.webp",
+            },
+            {
                 "name": "Albedo",
                 "description": "Albedo is a library for real-time pathtracing and lightmapping.",
                 "website": "https://github.com/albedo-engine/albedo",
                 "thumbnail": "screenshots/albedo.webp",
             },
             {
-                "name": "Pdhv",
-                "description": "Pdhv is a real-time performance data acquisition software.",
-                "website": "https://pdhv.fr",
-                "thumbnail": "screenshots/pdhv.webp",
+                "name": "ampli-Fe",
+                "description": "Fully cross-platform VST2 plugin UI",
+                "website": "https://github.com/antonok-edm/ampli-Fe",
+                "thumbnail": "screenshots/ampli-Fe.jpg",
             },
             {
                 "name": "Bevy",
@@ -221,28 +227,16 @@
                 "thumbnail": "screenshots/bevy.gif",
             },
             {
-                "name": "Rerun",
-                "description": "SDK + Visualizer for logging computer vision and robotics.",
-                "website": "https://www.rerun.io/",
-                "thumbnail": "screenshots/rerun.gif",
+                "name": "Blub",
+                "description": "A GPU fluid solver (APIC)",
+                "website": "https://github.com/wumpf/blub",
+                "thumbnail": "screenshots/blub-fluid.gif",
             },
             {
-                "name": "WASM nbodysim",
-                "description": "Realtime 2D WASM N-Body-Simulation",
-                "website": "https://github.com/simbleau/nbody-wasm-sim",
-                "thumbnail": "screenshots/nbodywasm.gif",
-            },
-            {
-                "name": "nbodysim",
-                "description": "Realtime 3D N-Body-Simulation",
-                "website": "https://github.com/timokoesters/nbodysim",
-                "thumbnail": "screenshots/nbodysim.gif",
-            },
-            {
-                "name": "Veloren",
-                "description": "A multiplayer voxel RPG with advanced terrain generation and economy simulation",
-                "website": "https://veloren.net/",
-                "thumbnail": "screenshots/veloren.gif",
+                "name": "Brawlib",
+                "description": "Brawl file parser",
+                "website": "https://github.com/rukai/brawllib_rs",
+                "thumbnail": "screenshots/brawl-attack.gif",
             },
             {
                 "name": "Dotrix",
@@ -251,130 +245,142 @@
                 "thumbnail": "screenshots/dotrix-skeletal.gif",
             },
             {
-                "name": "Vange-rs",
-                "description": "Rusty Vangers clone",
-                "website": "https://github.com/kvark/vange-rs",
-                "thumbnail": "screenshots/vange-rs.png"
-            },
-            {
-                "name": "Harmony",
-                "description": "A modern 3D/2D game engine that uses wgpu",
-                "website": "https://github.com/StarArawn/harmony",
-                "thumbnail": "screenshots/harmony-rs.jpg"
-            },
-            {
-                "name": "Blub",
-                "description": "A GPU fluid solver (APIC)",
-                "website": "https://github.com/wumpf/blub",
-                "thumbnail": "screenshots/blub-fluid.gif"
-            },
-            {
-                "name": "Brawlib",
-                "description": "Brawl file parser",
-                "website": "https://github.com/rukai/brawllib_rs",
-                "thumbnail": "screenshots/brawl-attack.gif"
-            },
-            {
-                "name": "GLX",
-                "description": "OpenStreetMap renderer",
-                "website": "https://github.com/paulkernfeld/glx",
-                "thumbnail": "screenshots/glx-map.png"
-            },
-            {
-                "name": "Neothesia",
-                "description": "Cross-platform GPU accelerated midi visualizer",
-                "website": "https://github.com/PolyMeilex/Neothesia",
-                "thumbnail": "screenshots/neothesia.gif"
-            },
-            {
-                "name": "Sky renderer",
-                "description": "A wgpu allsky renderer",
-                "website": "https://github.com/bmatthieu3/wgpu-sky-rendering",
-                "thumbnail": "screenshots/dss.gif"
-            },
-            {
-                "name": "grass field",
-                "description": "TuiTui's everyday experiments",
-                "website": "https://www.instagram.com/mactuitui/",
-                "thumbnail": "screenshots/tuitui-grass-field.png"
-            },
-            {
-                "name": "Hectic-rs",
-                "description": "Hectic rewrite in Rust",
-                "website": "https://github.com/expenses/hectic-rs",
-                "thumbnail": "screenshots/hectic.png"
-            },
-            {
-                "name": "Richter",
-                "description": "Quake engine in Rust",
-                "website": "https://github.com/cormac-obrien/richter",
-                "thumbnail": "screenshots/richter.png"
-            },
-            {
-                "name": "Göld",
-                "description": "Löve but for Goldsrc",
-                "website": "https://github.com/Vurich/goeld",
-                "thumbnail": "screenshots/goeld.png"
-            },
-            {
                 "name": "Egregoria",
                 "description": "Society simulator",
                 "website": "https://github.com/Uriopass/Egregoria",
-                "thumbnail": "screenshots/egregoria.jpg"
-            },
-            {
-                "name": "Sandbox",
-                "description": "Falling sand game",
-                "website": "https://github.com/JMS55/sandbox",
-                "thumbnail": "screenshots/sandbox.png"
-            },
-            {
-                "name": "Terra",
-                "description": "Planet rendering library",
-                "website": "https://github.com/fintelia/terra",
-                "thumbnail": "screenshots/terra.jpg"
-            },
-            {
-                "name": "ampli-Fe",
-                "description": "Fully cross-platform VST2 plugin UI",
-                "website": "https://github.com/antonok-edm/ampli-Fe",
-                "thumbnail": "screenshots/ampli-Fe.jpg"
+                "thumbnail": "screenshots/egregoria.jpg",
             },
             {
                 "name": "ENSnano",
                 "description": "CAD software for 3D DNA nanostructures",
                 "website": "https://www.ens-lyon.fr/ensnano",
-                "thumbnail": "screenshots/ensnano.png"
+                "thumbnail": "screenshots/ensnano.png",
+            },
+            {
+                "name": "GLX",
+                "description": "OpenStreetMap renderer",
+                "website": "https://github.com/paulkernfeld/glx",
+                "thumbnail": "screenshots/glx-map.png",
+            },
+            {
+                "name": "grass field",
+                "description": "TuiTui's everyday experiments",
+                "website": "https://www.instagram.com/mactuitui/",
+                "thumbnail": "screenshots/tuitui-grass-field.png",
+            },
+            {
+                "name": "Göld",
+                "description": "Löve but for Goldsrc",
+                "website": "https://github.com/Vurich/goeld",
+                "thumbnail": "screenshots/goeld.png",
+            },
+            {
+                "name": "Harmony",
+                "description": "A modern 3D/2D game engine that uses wgpu",
+                "website": "https://github.com/StarArawn/harmony",
+                "thumbnail": "screenshots/harmony-rs.jpg",
+            },
+            {
+                "name": "Hectic-rs",
+                "description": "Hectic rewrite in Rust",
+                "website": "https://github.com/expenses/hectic-rs",
+                "thumbnail": "screenshots/hectic.png",
+            },
+            {
+                "name": "nbodysim",
+                "description": "Realtime 3D N-Body-Simulation",
+                "website": "https://github.com/timokoesters/nbodysim",
+                "thumbnail": "screenshots/nbodysim.gif",
+            },
+            {
+                "name": "Neothesia",
+                "description": "Cross-platform GPU accelerated midi visualizer",
+                "website": "https://github.com/PolyMeilex/Neothesia",
+                "thumbnail": "screenshots/neothesia.gif",
+            },
+            {
+                "name": "Pdhv",
+                "description": "Pdhv is a real-time performance data acquisition software.",
+                "website": "https://pdhv.fr",
+                "thumbnail": "screenshots/pdhv.webp",
+            },
+            {
+                "name": "Rerun",
+                "description": "SDK + Visualizer for logging computer vision and robotics.",
+                "website": "https://www.rerun.io/",
+                "thumbnail": "screenshots/rerun.gif",
+            },
+            {
+                "name": "Richter",
+                "description": "Quake engine in Rust",
+                "website": "https://github.com/cormac-obrien/richter",
+                "thumbnail": "screenshots/richter.png",
+            },
+            {
+                "name": "Sandbox",
+                "description": "Falling sand game",
+                "website": "https://github.com/JMS55/sandbox",
+                "thumbnail": "screenshots/sandbox.png",
+            },
+            {
+                "name": "Sky renderer",
+                "description": "A wgpu allsky renderer",
+                "website": "https://github.com/bmatthieu3/wgpu-sky-rendering",
+                "thumbnail": "screenshots/dss.gif",
+            },
+            {
+                "name": "Terra",
+                "description": "Planet rendering library",
+                "website": "https://github.com/fintelia/terra",
+                "thumbnail": "screenshots/terra.jpg",
+            },
+            {
+                "name": "Vange-rs",
+                "description": "Rusty Vangers clone",
+                "website": "https://github.com/kvark/vange-rs",
+                "thumbnail": "screenshots/vange-rs.png",
+            },
+            {
+                "name": "Veloren",
+                "description": "A multiplayer voxel RPG with advanced terrain generation and economy simulation",
+                "website": "https://veloren.net/",
+                "thumbnail": "screenshots/veloren.gif",
+            },
+            {
+                "name": "WASM nbodysim",
+                "description": "Realtime 2D WASM N-Body-Simulation",
+                "website": "https://github.com/simbleau/nbody-wasm-sim",
+                "thumbnail": "screenshots/nbodywasm.gif",
             },
             {
                 "name": "wgpu",
                 "description": "Water example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/water",
-                "thumbnail": "screenshots/example-water.gif"
+                "thumbnail": "screenshots/example-water.gif",
             },
             {
                 "name": "wgpu",
                 "description": "Shadow example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/shadow",
-                "thumbnail": "screenshots/example-shadow.png"
+                "thumbnail": "screenshots/example-shadow.png",
             },
             {
                 "name": "wgpu",
                 "description": "Cube example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/cube",
-                "thumbnail": "screenshots/example-cube.png"
+                "thumbnail": "screenshots/example-cube.png",
             },
             {
                 "name": "wgpu",
                 "description": "Mipmap example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/mipmap",
-                "thumbnail": "screenshots/example-mipmap.png"
+                "thumbnail": "screenshots/example-mipmap.png",
             },
             {
                 "name": "wgpu",
                 "description": "Skybox example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/skybox",
-                "thumbnail": "screenshots/example-skybox.gif"
+                "thumbnail": "screenshots/example-skybox.gif",
             }
         ];
 
