sdf2mesh showcase

--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
                 "thumbnail": "screenshots/ensnano.png"
             },
             {
+                "name": "sdf2mesh",
+                "description": "Convert SDFs from ShaderToy to triangle meshes",
+                "website": "https://github.com/WilstonOreo/sdf2mesh",
+                "thumbnail": "screenshots/sdf2mesh.png"
+            },
+            {
                 "name": "wgpu",
                 "description": "Water example",
                 "website": "https://github.com/gfx-rs/wgpu/tree/trunk/examples/src/water",
