Add bindings section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
     </script>
 
     <script>
+        // List of bindings
+        const bindings_list = [
+            {
+                "name": "wgpu4k",
+                "description": "Work-in-progress binding for Kotlin/Multiplatform",
+                "website": "https://GitHub.com/wgpu4k/wgpu4k",
+                "thumbnail": "https://google.com/favicon.ico"
+            }
+        ]
+        
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
@@ -406,15 +416,27 @@
             `;
         }
 
-        const showcase_container = document.getElementById("showcase_container");
+        const sections = [
+            {
+                "container": "bindings_container",
+                "entries": bindings_list
+            },
+            {
+                "container": "showcase_container",
+                "entries": showcase_list
+            }
+        ];
 
-        for (let { name, description, website, thumbnail } of showcase_list) {
-            showcase_container.insertAdjacentHTML("beforeend", showcase_template({
-                name,
-                description,
-                website,
-                thumbnail
-            }));
+        for (let { container, entries } of sections) {
+            const container_element = document.getElementById(container);
+            for (let { name, description, website, thumbnail } of entries) {
+                container_element.insertAdjacentHTML("beforeend", showcase_template({
+                    name,
+                    description,
+                    website,
+                    thumbnail
+                }));
+            }
         }
     </script>
 </body>
