Added bindings to HTML as well

--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
 
             <div id="showcase_container"></div>
         </div>
+
+        <div class="container">
+            <h1 class="title is-1"><a name="bindings">#</a> Bindings</h1>
+            <br>
+            <p class="subtitle is-4">Ported <b>wgpu</b>? <a
+                    href="https://github.com/gfx-rs/wgpu-rs.github.io">Make a PR</a>, and reach out to us on <a
+                    href="https://matrix.to/#/#wgpu-users:matrix.org">#wgpu-users</a>!</p>
+            <br>
+
+            <div id="bindings_container"></div>
+        </div>
     </section>
 
     <!-- Helper script for toggling the navigation-bar burger menu on small screens -->
