--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
     </script>
 
     <script>
-        // List of bindings
+        // List of bindings; Edit this list to add or remove projects
         const bindings_list = [
             {
                 "name": "wgpu4k",
                 "description": "Work-in-progress binding for Kotlin/Multiplatform",
                 "website": "https://GitHub.com/wgpu4k/wgpu4k",
-                "thumbnail": "https://google.com/favicon.ico"
+                "thumbnail": "https://avatars.githubusercontent.com/u/163670885"
             }
         ]
         
