add realtime mandelbrot set explorer exemple

--- a/index.html
+++ b/index.html
@@ -269,6 +269,12 @@
                 "thumbnail": "screenshots/brawl-attack.gif"
             },
             {
+                "name": "Realtime Mandelbrot",
+                "description": "Mandelbrot set explorer built with TypeScript, Rust and wgpu.",
+                "website": "https://gcollombet.github.io/mandelbrot/",
+                "thumbnail": "screenshots/mandelbrot.webp",
+            },
+            {
                 "name": "GLX",
                 "description": "OpenStreetMap renderer",
                 "website": "https://github.com/paulkernfeld/glx",
