Fixed incorrect link

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             {
                 "name": "Göld",
                 "description": "Löve but for Goldsrc",
-                "website": "https://github.com/Vurich/goeld",
+                "website": "https://github.com/eira-fransham/goeld",
                 "thumbnail": "screenshots/goeld.png"
             },
             {
